--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".MainActivity"
+        android:id="@+id/activity_main">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        <Button
+                android:text="Добавить пользователя"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/activity_main_button_user_reg"
+                android:layout_marginTop="132dp"
+                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintHorizontal_bias="0.497"/>
+        <Button
+                android:text="Добавить работу"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/activity_main_button_add_service"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="36dp"
+                app:layout_constraintTop_toBottomOf="@+id/activity_main_button_user_reg"
+                app:layout_constraintHorizontal_bias="0.497"/>
+        <Button
+                android:text="Посмотреть список работ"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/activity_main_button_services_list"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="52dp"
+                app:layout_constraintTop_toBottomOf="@+id/activity_main_button_add_service"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
