--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,5 +39,13 @@
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="52dp"
                 app:layout_constraintTop_toBottomOf="@+id/activity_main_button_add_service"/>
+        <Button
+                android:text="Список пользователей"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/activity_main_button_user_list"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                android:layout_marginTop="28dp"
+                app:layout_constraintTop_toBottomOf="@+id/activity_main_button_services_list"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
