--- a/app/src/main/res/layout/fragment_user_reg.xml
+++ b/app/src/main/res/layout/fragment_user_reg.xml
@@ -5,10 +5,11 @@
              android:layout_height="match_parent"
              tools:context=".fragments.UserRegFragment"
              android:id="@+id/fragment_user_reg">
+
     <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#D3380000">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/drawable_bg">
 
         <EditText
                 android:layout_width="wrap_content"
