--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,13 +8,15 @@
         tools:context=".MainActivity"
         android:id="@+id/activity_main">
 
-
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    <TextView
+            android:text="TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/textView"
+            android:layout_centerInParent="true"/>
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true">
         <Button
                 android:text="Добавить пользователя"
                 android:layout_width="wrap_content"
@@ -48,4 +50,4 @@
                 android:layout_marginTop="28dp"
                 app:layout_constraintTop_toBottomOf="@+id/activity_main_button_services_list"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
-</FrameLayout>
+</RelativeLayout>
