--- a/app/src/main/res/layout/fragment_user_reg.xml
+++ b/app/src/main/res/layout/fragment_user_reg.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                    xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   xmlns:tools="http://schemas.android.com/tools"
                                                    android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
-                                                   tools:context=".fragments.UserRegFragment"
                                                    android:id="@+id/fragment_user_reg">
 
+    <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:id="@+id/space"/>
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="7"
             android:id="@+id/fragment_user_reg_login"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="36dp" android:layout_marginTop="8dp"
+            app:layout_constraintStart_toEndOf="@+id/space" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/fragment_user_reg_label"/>
     <EditText
             android:layout_width="wrap_content"
@@ -22,48 +25,39 @@
             android:inputType="textPassword"
             android:ems="7"
             android:id="@+id/fragment_user_reg_password"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_user_reg_login"
-            app:layout_constraintHorizontal_bias="0.807"/>
+            app:layout_constraintStart_toEndOf="@+id/space" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_user_reg_login"/>
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="7"
             android:id="@+id/fragment_user_reg_password_repeat"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_user_reg_password"
-            app:layout_constraintHorizontal_bias="0.807"
-            android:layout_marginTop="8dp"/>
+            app:layout_constraintStart_toEndOf="@+id/space" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_user_reg_password"/>
     <TextView
             android:text="Пароль"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/fragment_user_reg_label_password"
-            android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_user_reg_label_login"
-            app:layout_constraintEnd_toStartOf="@+id/fragment_user_reg_password"
-            android:layout_marginEnd="12dp"/>
+            android:layout_height="wrap_content"
+            android:id="@+id/fragment_user_reg_label_password"
+            app:layout_constraintEnd_toStartOf="@+id/space"
+            android:layout_marginEnd="12dp" android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_user_reg_label_login"/>
     <TextView
             android:text="Повторите пароль"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/fragment_user_reg_label_password_repeat"
-            android:layout_marginTop="36dp"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_user_reg_label_password"
-            app:layout_constraintEnd_toStartOf="@+id/fragment_user_reg_password_repeat"
-            android:layout_marginEnd="12dp"/>
+            android:layout_height="wrap_content"
+            android:id="@+id/fragment_user_reg_label_password_repeat"
+            app:layout_constraintEnd_toStartOf="@+id/space"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_user_reg_label_password" android:layout_marginTop="32dp"
+            android:layout_marginEnd="16dp"/>
     <TextView
             android:text="Имя пользователя"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/fragment_user_reg_label_login"
-            app:layout_constraintEnd_toStartOf="@+id/fragment_user_reg_login" android:layout_marginEnd="8dp"
-            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/fragment_user_reg_label"/>
+            android:layout_height="wrap_content"
+            android:id="@+id/fragment_user_reg_label_login"
+            app:layout_constraintEnd_toStartOf="@+id/space" android:layout_marginTop="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_user_reg_label" android:layout_marginEnd="16dp"/>
     <Button
             android:text="Добавить"
             android:layout_width="wrap_content"
