--- a/app/src/main/res/layout/activity_worker.xml
+++ b/app/src/main/res/layout/activity_worker.xml
@@ -11,9 +11,11 @@
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="347dp" android:layout_marginTop="80dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintHeight_percent="0.5"
+            app:layout_constraintTop_toBottomOf="@+id/activity_worker_label_user"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
             android:id="@+id/activity_worker_work_list">
         <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
@@ -24,28 +26,28 @@
             android:text="Добавить"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/activity_worker_button_addwork"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/activity_worker_work_list"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="date"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintHorizontal_bias="0.481" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/activity_worker_work_list"/>
+    <TextView
+            android:layout_width="98dp"
+            android:layout_height="30dp"
             android:ems="10"
-            android:id="@+id/activity_worker_date_price" android:layout_marginBottom="148dp"
+            android:id="@+id/activity_worker_date_price" android:layout_marginBottom="80dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/activity_worker_label_date" android:layout_marginStart="8dp"/>
+            app:layout_constraintStart_toEndOf="@+id/activity_worker_label_date" android:layout_marginStart="24dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/activity_worker_label_price"/>
     <TextView
             android:text="Финансовые показатели"
             android:textSize="8pt"
             android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/activity_worker_label_price" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/activity_worker_date_price"
+            android:id="@+id/activity_worker_label_price"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="44dp"/>
+            android:layout_marginStart="56dp" android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/activity_worker_button_addwork"/>
     <TextView
             tools:text="Заработано за период: 16800 руб."
             android:layout_width="wrap_content"
@@ -69,8 +71,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/activity_worker_label_date" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="44dp" android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/activity_worker_label_price"/>
+            android:layout_marginStart="56dp"
+            android:layout_marginBottom="116dp" app:layout_constraintBottom_toBottomOf="parent"/>
     <TextView
             android:text="TextView"
             android:layout_width="wrap_content"
