--- a/app/src/main/res/layout/activity_worker.xml
+++ b/app/src/main/res/layout/activity_worker.xml
@@ -8,36 +8,30 @@
         tools:context=".WorkerActivity"
         android:id="@+id/activity_worker">
 
-    <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintHeight_percent="0.5"
+    <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="392dp"
+            android:layout_height="363dp"
+            android:id="@+id/activity_worker_list"
+            android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/activity_worker_label_user"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
-            android:id="@+id/activity_worker_work_list">
-        <androidx.recyclerview.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/activity_worker_row"/>
-    </LinearLayout>
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
     <Button
             android:text="Добавить"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/activity_worker_button_addwork"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.481" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/activity_worker_work_list"/>
+            app:layout_constraintHorizontal_bias="0.493"
+            android:layout_marginBottom="36dp" app:layout_constraintBottom_toTopOf="@+id/activity_worker_label_price"/>
     <TextView
-            android:layout_width="98dp"
-            android:layout_height="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="8pt"
             android:ems="10"
-            android:id="@+id/activity_worker_date_price" android:layout_marginBottom="80dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/activity_worker_label_date" android:layout_marginStart="24dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/activity_worker_label_price"/>
+            android:id="@+id/activity_worker_date_price"
+            app:layout_constraintStart_toEndOf="@+id/activity_worker_label_date" android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/activity_worker_price_org"/>
     <TextView
             android:text="Финансовые показатели"
             android:textSize="8pt"
@@ -45,36 +39,39 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/activity_worker_label_price"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="56dp" android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/activity_worker_button_addwork"/>
+            android:layout_marginBottom="44dp"
+            app:layout_constraintBottom_toTopOf="@+id/activity_worker_date_price" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"/>
     <TextView
-            tools:text="Заработано за период: 16800 руб."
+            android:text="Заработано за период: 16800 руб."
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#51A505"
-            android:id="@+id/activity_worker_price_org" android:layout_marginTop="12dp"
-            app:layout_constraintTop_toBottomOf="@+id/activity_worker_date_price"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="44dp"/>
+            android:id="@+id/activity_worker_price_org"
+            android:layout_marginBottom="4dp"
+            app:layout_constraintBottom_toTopOf="@+id/activity_worker_price_worker" android:layout_marginStart="48dp"
+            app:layout_constraintStart_toStartOf="parent"/>
     <TextView
+            android:text="Получено за период: 8000 руб."
             tools:text="Получено за период: 8000 руб."
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#0532A5"
-            android:id="@+id/activity_worker_price_worker" android:layout_marginStart="44dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/activity_worker_price_org"/>
+            android:id="@+id/activity_worker_price_worker"
+            android:layout_marginBottom="36dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="48dp"
+            app:layout_constraintStart_toStartOf="parent"/>
     <TextView
             android:text="От даты"
             android:textSize="8pt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/activity_worker_label_date" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="56dp"
-            android:layout_marginBottom="116dp" app:layout_constraintBottom_toBottomOf="parent"/>
+            android:id="@+id/activity_worker_label_date"
+            android:layout_marginStart="76dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/activity_worker_price_org"/>
     <TextView
-            android:text="TextView"
             android:layout_width="wrap_content"
             android:textSize="10pt"
             android:textStyle="bold"
