--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,12 +3,12 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">#F57F17</item>
+        <item name="colorPrimaryDark">#791D1D</item>
+        <item name="colorAccent">#03A9F4</item>
     </style>
 
-    <style name="TableRows" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+    <style name="TableRows" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">#535A66</item>
         <item name="colorPrimaryDark">#D7C3D1E0</item>
