--- a/app/src/main/res/layout/activity_worker.xml
+++ b/app/src/main/res/layout/activity_worker.xml
@@ -8,14 +8,16 @@
         tools:context=".WorkerActivity"
         android:id="@+id/activity_worker">
 
+
     <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="392dp"
-            android:layout_height="363dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/activity_worker_list"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/activity_worker_label_user"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/activity_worker_button_addwork"/>
     <Button
             android:text="Добавить"
             android:layout_width="wrap_content"
@@ -39,36 +41,34 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/activity_worker_label_price"
-            android:layout_marginBottom="44dp"
+            android:layout_marginBottom="28dp"
             app:layout_constraintBottom_toTopOf="@+id/activity_worker_date_price" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent"/>
     <TextView
-            android:text="Заработано за период: 16800 руб."
+            tools:text="Заработано за период: 16800 руб."
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#51A505"
             android:id="@+id/activity_worker_price_org"
-            android:layout_marginBottom="4dp"
-            app:layout_constraintBottom_toTopOf="@+id/activity_worker_price_worker" android:layout_marginStart="48dp"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintBottom_toTopOf="@+id/activity_worker_price_worker" android:layout_marginStart="32dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="4dp"/>
     <TextView
-            android:text="Получено за период: 8000 руб."
             tools:text="Получено за период: 8000 руб."
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#0532A5"
             android:id="@+id/activity_worker_price_worker"
-            android:layout_marginBottom="36dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="48dp"
+            android:layout_marginBottom="40dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="32dp"
             app:layout_constraintStart_toStartOf="parent"/>
     <TextView
-            android:text="От даты"
+            android:text="От даты:"
             android:textSize="8pt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/activity_worker_label_date"
-            android:layout_marginStart="76dp"
+            android:layout_marginStart="32dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/activity_worker_price_org"/>
     <TextView
@@ -81,4 +81,23 @@
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             tools:text="Рабочее окно сотрудника: Alex"/>
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="102dp"
+            android:layout_height="40dp" android:layout_marginBottom="40dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="16dp">
+        <TextView
+                android:text="К выплате:"
+                android:textColor="#51A505"
+                android:textStyle="bold"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/activity_worker_total_label"/>
+        <TextView
+                tools:text="+ 12000 руб."
+                android:textColor="#51A505"
+                android:textStyle="bold"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/activity_worker_total_salary"/>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
