--- a/app/src/main/res/layout/fragment_user_reg.xml
+++ b/app/src/main/res/layout/fragment_user_reg.xml
@@ -71,12 +71,12 @@
             android:text="Регистрация нового пользователя"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="8pt"
+            android:textSize="16sp"
             android:gravity="center_horizontal"
             android:textStyle="bold"
             android:id="@+id/fragment_user_reg_label"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
