--- a/app/src/main/res/layout/activity_worker.xml
+++ b/app/src/main/res/layout/activity_worker.xml
@@ -17,7 +17,8 @@
             app:layout_constraintTop_toBottomOf="@+id/activity_worker_label_user"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/activity_worker_button_addwork"/>
+            app:layout_constraintBottom_toTopOf="@+id/activity_worker_button_addwork"
+            android:foregroundGravity="top"/>
     <Button
             android:text="Добавить"
             android:layout_width="wrap_content"
@@ -29,14 +30,14 @@
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="8pt"
+            android:textSize="16sp"
             android:ems="10"
             android:id="@+id/activity_worker_date_price"
             app:layout_constraintStart_toEndOf="@+id/activity_worker_label_date" android:layout_marginStart="8dp"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/activity_worker_price_org"/>
     <TextView
             android:text="Финансовые показатели"
-            android:textSize="8pt"
+            android:textSize="16sp"
             android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -51,8 +52,8 @@
             android:layout_height="wrap_content"
             android:textColor="#51A505"
             android:id="@+id/activity_worker_price_org"
-            app:layout_constraintBottom_toTopOf="@+id/activity_worker_price_worker" android:layout_marginStart="32dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="4dp"/>
+            app:layout_constraintBottom_toTopOf="@+id/activity_worker_price_worker" android:layout_marginStart="16dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"/>
     <TextView
             tools:text="Получено за период: 8000 руб."
             android:layout_width="wrap_content"
@@ -60,15 +61,15 @@
             android:textColor="#0532A5"
             android:id="@+id/activity_worker_price_worker"
             android:layout_marginBottom="40dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="32dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="16dp"
             app:layout_constraintStart_toStartOf="parent"/>
     <TextView
             android:text="От даты:"
-            android:textSize="8pt"
+            android:textSize="16sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/activity_worker_label_date"
-            android:layout_marginStart="32dp"
+            android:layout_marginStart="16dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/activity_worker_price_org"/>
     <TextView
