--- a/app/src/main/res/layout/fragment_service_add.xml
+++ b/app/src/main/res/layout/fragment_service_add.xml
@@ -23,7 +23,7 @@
                 android:id="@+id/guideline"/>
         <TextView
                 android:text="Добавление заказа"
-                android:textSize="8pt"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
