--- a/app/src/main/res/layout/work_oreder_item.xml
+++ b/app/src/main/res/layout/work_oreder_item.xml
@@ -2,36 +2,42 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
-                                   android:layout_width="wrap_content"
-                                   android:layout_height="wrap_content" android:id="@+id/work_order_item">
+                                   android:layout_width="match_parent"
+                                   android:layout_height="wrap_content"
+                                   app:cardCornerRadius="16dp"
+                                   android:outlineAmbientShadowColor="#494949"
+                                   android:outlineSpotShadowColor="#494949"
+                                   android:id="@+id/work_order_item"
+                                   android:layout_marginBottom="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
         <TextView
-                android:layout_width="195dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/work_order_item_car"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="8dp"
                 tools:text="Green Bugatti"/>
         <TextView
-                android:layout_width="141dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/work_order_item_price"
-                tools:text="7 058 руб" android:layout_marginTop="16dp"
+                tools:text="7 058 руб" android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/work_order_item_user"
-                android:layout_marginStart="32dp" app:layout_constraintStart_toEndOf="@+id/work_order_item_date"/>
+                app:layout_constraintStart_toEndOf="@+id/space2" android:layout_marginStart="8dp"/>
         <TextView
-                android:layout_width="110dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/work_order_item_user"
-                tools:text="Alex" android:layout_marginTop="16dp"
-                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/work_order_item_car"
-                android:layout_marginStart="8dp"/>
+                tools:text="Alex" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/space2" android:layout_marginStart="16dp"/>
         <TextView
-                android:layout_width="140dp"
-                android:layout_height="19dp" android:id="@+id/work_order_item_date"
-                android:layout_marginTop="16dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/work_order_item_date"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 tools:text="02/04/2019"
                 app:layout_constraintTop_toBottomOf="@+id/work_order_item_car"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
@@ -39,7 +45,16 @@
                 android:layout_width="52dp"
                 android:layout_height="50dp" app:srcCompat="@android:drawable/presence_online"
                 android:id="@+id/work_order_item_image_done"
-                app:layout_constraintStart_toEndOf="@+id/work_order_item_car" android:layout_marginStart="128dp"
-                android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"/>
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="24dp"/>
+        <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+                android:id="@+id/space2"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
