--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,37 +13,29 @@
             android:layout_height="match_parent"
     >
         <Button
-                android:text="Добавить пользователя"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/activity_main_button_user_reg"
-                android:layout_marginTop="136dp"
-                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintHorizontal_bias="0.497"/>
-        <Button
                 android:text="Запись на ремонт"
                 android:layout_width="wrap_content"
+                android:background="@drawable/buttons_style"
                 android:layout_height="wrap_content" android:id="@+id/activity_main_button_records"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                app:layout_constraintHorizontal_bias="0.497" android:layout_marginTop="60dp"
+                app:layout_constraintHorizontal_bias="0.497" android:layout_marginTop="96dp"
                 app:layout_constraintTop_toBottomOf="@+id/activity_main_button_user_list"/>
         <Button
                 android:text="Администратор"
                 android:layout_width="wrap_content"
+                android:background="@drawable/buttons_style"
                 android:layout_height="wrap_content" android:id="@+id/activity_main_button_admin"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="92dp"
-                app:layout_constraintTop_toBottomOf="@+id/activity_main_button_records"
-        />
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                android:layout_marginBottom="60dp" app:layout_constraintBottom_toBottomOf="parent"/>
         <Button
                 android:text="Список пользователей"
                 android:layout_width="wrap_content"
+                android:background="@drawable/buttons_style"
                 android:layout_height="wrap_content" android:id="@+id/activity_main_button_user_list"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                app:layout_constraintHorizontal_bias="0.497" android:layout_marginTop="56dp"
-                app:layout_constraintTop_toBottomOf="@+id/activity_main_button_user_reg"/>
+                android:layout_marginTop="96dp" app:layout_constraintTop_toTopOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </RelativeLayout>
