--- a/app/src/main/res/layout/activity_worker.xml
+++ b/app/src/main/res/layout/activity_worker.xml
@@ -42,6 +42,7 @@
         <Button
                 android:text="Добавить"
                 android:layout_width="wrap_content"
+                android:background="@drawable/buttons_style"
                 android:layout_height="wrap_content" android:id="@+id/activity_worker_button_addwork"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
