--- a/app/src/main/res/layout/fragment_record_add.xml
+++ b/app/src/main/res/layout/fragment_record_add.xml
@@ -83,6 +83,7 @@
                 android:text="Записать"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/buttons_style"
                 android:id="@+id/fragment_record_add_button_ok"
                 android:layout_marginTop="8dp"
                 app:layout_constraintStart_toStartOf="parent"
