--- a/app/src/main/res/layout/fragment_user_reg.xml
+++ b/app/src/main/res/layout/fragment_user_reg.xml
@@ -60,6 +60,7 @@
             app:layout_constraintTop_toBottomOf="@+id/fragment_user_reg_label" android:layout_marginEnd="16dp"/>
     <Button
             android:text="Добавить"
+            android:background="@drawable/buttons_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/fragment_user_reg_button_add"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
