--- a/app/src/main/res/layout/fragment_record_add.xml
+++ b/app/src/main/res/layout/fragment_record_add.xml
@@ -2,7 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/scrollView"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:animateLayoutChanges="true"
             android:fadeScrollbars="false"
@@ -10,7 +10,8 @@
             android:isScrollContainer="true"
             android:scrollbarAlwaysDrawVerticalTrack="true"
             android:scrollbars="vertical"
-            app:layout_scrollFlags="scroll">
+            app:layout_scrollFlags="scroll"
+            android:layout_gravity="center">
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                        xmlns:app="http://schemas.android.com/apk/res-auto"
                                                        android:layout_width="match_parent"
