--- a/app/src/main/res/layout/fragment_service_add.xml
+++ b/app/src/main/res/layout/fragment_service_add.xml
@@ -12,13 +12,14 @@
             android:scrollbars="vertical"
             android:layout_gravity="center"
             app:layout_scrollFlags="scroll">
-    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
-                                                       android:layout_height="wrap_content">
+    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="wrap_content"
+                                                       android:layout_height="wrap_content"
+                                                       android:layout_gravity="center">
 
         <androidx.constraintlayout.widget.Guideline
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" app:layout_constraintGuide_begin="128dp"
+                android:layout_height="wrap_content" app:layout_constraintGuide_begin="96dp"
                 android:id="@+id/guideline"/>
         <TextView
                 android:text="Добавление заказа"
@@ -85,7 +86,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/textView2"
                 app:layout_constraintEnd_toStartOf="@+id/guideline"
-                android:layout_marginEnd="12dp" android:layout_marginTop="8dp"
+                android:layout_marginTop="8dp"
                 app:layout_constraintTop_toTopOf="@+id/fragment_service_add_car"/>
         <TextView
                 android:text="Что сделано:"
@@ -93,7 +94,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/textView3"
                 app:layout_constraintEnd_toStartOf="@+id/guideline"
-                android:layout_marginEnd="12dp" android:layout_marginTop="8dp"
+                android:layout_marginTop="8dp"
                 app:layout_constraintTop_toTopOf="@+id/fragment_service_add_service"/>
         <TextView
                 android:text="Сумма заказа:"
@@ -101,7 +102,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/textView4"
                 app:layout_constraintEnd_toStartOf="@+id/guideline"
-                android:layout_marginEnd="12dp" android:layout_marginTop="8dp"
+                android:layout_marginTop="8dp"
                 app:layout_constraintTop_toTopOf="@+id/fragment_service_add_price"/>
         <TextView
                 android:text="Комментарий:"
@@ -109,7 +110,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/textView5"
                 app:layout_constraintEnd_toStartOf="@+id/guideline"
-                android:layout_marginEnd="12dp" android:layout_marginTop="8dp"
+                android:layout_marginTop="8dp"
                 app:layout_constraintTop_toTopOf="@+id/fragment_service_add_comment"/>
 
 
